--- a/beta.html
+++ b/beta.html
@@ -131,6 +131,8 @@
     <nav id="primary-nav" class="nav-links">
       <a href="#retirement">Retirement Planner</a>
       <a href="budget/easy.html">Budget Tool</a>
+      <!-- NEW: Healthcare link -->
+      <a href="#healthcare">Healthcare</a>
     </nav>
   </div>
 </header>
@@ -304,6 +306,22 @@
         </div>
       </div> 
     </section>
+
+    <!-- NEW: Healthcare section -->
+    <div class="cb-header" id="healthcare" style="margin-top:28px;">
+      <h1 class="cb-title">Healthcare</h1>
+      <div class="cb-sub">
+        Explore plan options, estimated drug costs, and provider fit. (Prototype section – connect to your tools here.)
+      </div>
+    </div>
+
+    <div class="cb-card">
+      <p style="margin:0;">
+        This is a placeholder for your upcoming healthcare tools—e.g., plan finder, drug-cost analyzer, and provider network checker.
+        Link or embed your new pages/components here.
+      </p>
+    </div>
+    <!-- END Healthcare section -->
 
   </div>
 </div>
@@ -707,4 +725,3 @@ document.addEventListener('change', (e) => {
 
 </body>
 </html>
-
