--- a/beta.html
+++ b/beta.html
@@ -130,7 +130,7 @@
     <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Toggle navigation">☰</button>
     <nav id="primary-nav" class="nav-links">
       <a href="#retirement">Retirement Planner</a>
-      <a href="budget/easy.html">Budget Tool</a>
+      <a href="easy.html">Budget Tool</a>
       <!-- NEW: Healthcare link -->
       <a href="#"budget/plans.html">Healthcare</a>
     </nav>
