--- a/beta.html
+++ b/beta.html
@@ -132,7 +132,7 @@
       <a href="#retirement">Retirement Planner</a>
       <a href="easy.html">Budget Tool</a>
       <!-- NEW: Healthcare link -->
-      <a href="#"budget/plans.html">Healthcare</a>
+      <a href="#"healthcare/plans.html">Healthcare</a>
     </nav>
   </div>
 </header>
