Update Healthcare link in primary navigation

--- a/beta.html
+++ b/beta.html
@@ -132,7 +132,7 @@
       <a href="#retirement">Retirement Planner</a>
       <a href="easy.html">Budget Tool</a>
       <!-- NEW: Healthcare link -->
-      <a href="Healthcare/plans.html">Healthcare</a>
+      <a href="plans.html">Healthcare</a>
     </nav>
   </div>
 </header>
