--- a/beta.html
+++ b/beta.html
@@ -129,10 +129,9 @@
     <a class="brand" href="#">stakxAi</a>
     <button class="nav-toggle" aria-expanded="false" aria-controls="primary-nav" aria-label="Toggle navigation">☰</button>
     <nav id="primary-nav" class="nav-links">
-      <a href="#retirement">Retirement Planner</a>
-      <a href="easy.html">Budget Tool</a>
-      <!-- NEW: Healthcare link -->
-      <a href="questions.html">Healthcare</a>
+    <a href="index.html#retirement">Retirement Planner</a>
+    <a href="budget/easy.html">Budget Tool</a>
+    <a href="questions.html">Healthcare</a>
     </nav>
   </div>
 </header>
