--- a/beta.html
+++ b/beta.html
@@ -131,7 +131,7 @@
     <nav id="primary-nav" class="nav-links">
     <a href="index.html#retirement">Retirement Planner</a>
     <a href="budget/easy.html">Budget Tool</a>
-    <a href="questions.html">Healthcare</a>
+    <a href="questions.html">Healthcare Plan Options</a>
     </nav>
   </div>
 </header>
