--- a/beta.html
+++ b/beta.html
@@ -253,7 +253,7 @@
 
       <!-- Disclaimer -->
       <div class="cb-sub" style="margin:0 0 12px 0; text-align:center;">
-        <em>Note: This tool does not account for general income taxes. Only taxes on non‑retirement account investment returns are included.</em>
+        <em>Note: This is an estimate that does not account for general income taxes. Taxes on non‑retirement account assets are included to understand effects on the interest rate.</em>
       </div>
 
       <div id="sp-rest" style="display:none;">
