Update text for clarity in beta.html

--- a/beta.html
+++ b/beta.html
@@ -229,7 +229,7 @@
       <!-- Assumptions BEFORE charts with expert-default note -->
       <div class="cb-card" id="scenario-inputs" style="margin-bottom:16px;">
         <h3 style="margin:0 0 6px 0; font-size:18px;" class="center-title">Assumptions</h3>
-        <div class="cb-sub" style="margin:0 12px 12px; text-align:center;">Default assumptions reflect widely used expert guidelines. Adjust if you want to explore different scenarios.</div>
+        <div class="cb-sub" style="margin:0 12px 12px; text-align:center;">Default assumptions reflect widely used expert guidelines. Adjust to explore different scenarios.</div>
         <div class="cb-row" style="grid-template-columns: repeat(4, 1fr);">
           <div class="cb-field with-suffix" data-suffix="%/yr">
             <label for="spReturnPct">Expected Return</label>
@@ -244,7 +244,7 @@
             <input id="spWithdrawPct" type="number" step="0.1" min="1" max="100" value="4" inputmode="decimal" />
           </div>
           <div class="cb-field with-suffix" data-suffix="%">
-            <label for="spTaxRatePct">Tax Rate on Non-Retirement Returns</label>
+            <label for="spTaxRatePct">Non-Retirement Account Tax Rate</label>
             <input id="spTaxRatePct" type="number" step="0.1" min="0" max="60" value="0.6" inputmode="decimal" />
             <small style="color:var(--muted);">Approximate annual tax rate on taxable-account returns.</small>
           </div>
